--- a/data/inject/styles.css
+++ b/data/inject/styles.css
@@ -6,7 +6,7 @@
 .iaextractor-webx-button>span {
   color: var(--iax-background);
 }
-.iaextractor-webx-button:before {
+.iaextractor-webx-button::before {
   background-image: url('chrome-extension://__MSG_@@extension_id__/data/inject/download.svg') !important;
   background-size: 16px 16px !important;
   background-position: 0 !important;
@@ -16,16 +16,17 @@
     background-image: url('moz-extension://__MSG_@@extension_id__/data/inject/download.svg') !important;
   }
 }
-.iaextractor-new-button yt-icon {
+.iaextractor-new-button {
   background-image: url('chrome-extension://__MSG_@@extension_id__/data/inject/download.svg') !important;
   background-position: center center;
   background-repeat: no-repeat;
   background-size: 16px 16px !important;
   cursor: pointer;
+  min-width: 32px;
 }
 @-moz-document url-prefix() {
-  .iaextractor-webx-button:before {
-    background-image: url('moz-extension://__MSG_@@extension_id__/data/inject/download.svg');
+  .iaextractor-new-button {
+    background-image: url('moz-extension://__MSG_@@extension_id__/data/inject/download.svg') !important;
   }
 }
 
